--- a/mkalex/webPage/static/assets/sass/blog.scss
+++ b/mkalex/webPage/static/assets/sass/blog.scss
@@ -12,6 +12,7 @@ $mk-blog-block-changeflowwidth:750px;
     height:rem(145px);
     border-radius: rem(10px);
     border:$line-border;
+    box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.1),0px 2px 0px 0px rgba(255, 255, 255, 1) inset;
     margin-bottom: rem(10px);
     display: flex;cursor: pointer;
     justify-content: space-between;
@@ -30,7 +31,7 @@ $mk-blog-block-changeflowwidth:750px;
         width:100%;
         >h3{
             font-size: rem(32px);
-            font-weight: 400;
+            font-weight: 500;
             color: #616161;
             margin:rem(0px) rem(10px) rem(5px) rem(10px);
             @media(max-width: 900px){
@@ -62,7 +63,7 @@ $mk-blog-block-changeflowwidth:750px;
                 margin:rem(10px) rem(10px) rem(5px) rem(10px);
             }
             >div{
-                font-weight: 100;
+                font-weight: 300;
                 font-size: rem(14px);
                 // display: flex;
                 >.mk-blog-block-tag{
@@ -71,7 +72,10 @@ $mk-blog-block-changeflowwidth:750px;
                         margin:0px;
                     }
                     >span{
-                        padding-left: rem(5px);padding-right: rem(5px)
+                        padding-left: rem(5px);padding-right: rem(5px);
+                        margin-left:rem(5px);margin-right: rem(5px);
+                        background-color: rgb(149, 149, 149);color:#fff;
+                        border-radius: 20px;
                     }
                     @media(max-width: $mk-blog-block-changeflowwidth){
                         display: none;
@@ -83,7 +87,7 @@ $mk-blog-block-changeflowwidth:750px;
                         margin:0px;
                     }
                     >span{
-                        padding-left: rem(5px);padding-right: rem(5px)
+                        padding-left: rem(5px);padding-right: rem(5px);
                     }
                     @media(max-width: $mk-blog-block-changeflowwidth){
                         flex-direction: column;
@@ -93,8 +97,8 @@ $mk-blog-block-changeflowwidth:750px;
             >ul{
                 list-style: none;
                 padding-left: 0px;margin: 0px;padding-right: rem(10px);
-                color:rgb(218, 218, 218);
-                font-weight: 100;
+                color:rgb(167, 167, 167);
+                font-weight: 300;
                 font-size: rem(12px);
                 >li{
                     text-align: right;
@@ -111,7 +115,7 @@ $mk-blog-block-changeflowwidth:750px;
         // background-color: #fff;
         overflow: hidden;border-radius: rem(5px);
         @media(max-width: $mk-blog-block-changeflowwidth){
-            width: 80%;
+            width: 100%;
             height: auto;
             margin-top:rem(15px);
             margin-bottom:rem(15px);
