--- a/mkalex/webPage/static/assets/sass/nav.scss
+++ b/mkalex/webPage/static/assets/sass/nav.scss
@@ -1,14 +1,15 @@
 .mk-nav-main{
     height:rem(60px);
-    width: 100%;
+    width: 100%;transition: 0.8s ease-in-out;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    margin-top: 20px;
+    // padding-bottom: 20px;
     @media (max-width:700px ) {
-        padding: 0px;
+        padding: 0px;margin:0px;
         display: block;
+        height:rem(45px);
     }
     >ul{
         display: flex;
@@ -18,8 +19,8 @@
         transition:1s cubic-bezier(0, 0, 0.1, 0.93);
         @media (max-width:700px ) {
             position: relative;
-            left:0px;
-            background-color: #fff;
+            left:0px;box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.16);
+            background-color: rgba(#ffffff, 0.94);
             // flex-direction: column;
             display: block;
             overflow: hidden;
@@ -104,26 +105,26 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            height:45px;
+            height:rem(45px);
         }
         >.nav-min-logo{
-            width:30px;
+            width:30px;margin-left: rem(5px);
         }
         >.nav-min-slogon{
             width:150px;
         }
         >div{
             width:30px;
-            height:30px;
+            height:25px;
             display: flex;
             flex-direction: column;
             justify-content: space-around;
             // border: 1px solid rgb(83, 83, 83);
             >div{
-                background-color: rgb(201, 201, 201);
-                height:4px;
-                width:30px;
-                border-radius: 5px;
+                background-color: rgb(108, 108, 108);
+                height:3px;
+                width:25px;
+                // border-radius: 5px;
             }
         }
     }
